new: SSE support
