# pkg/nukibridge/api/api_events.go
@@ -1,0 +1,42 @@
+/*
+ * Keyturner api
+ *
+ * Keyturner api
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+import (
+	"net/http"
+	"strings"
+)
+
+// A EventsApiController binds http requests to an api service and writes the service results to the http response
+type EventsApiController struct {
+	service EventsApiServicer
+}
+
+// NewEventsApiController creates a default api controller
+func NewEventsApiController(s EventsApiServicer) Router {
+	return &EventsApiController{service: s}
+}
+
+// Routes returns all of the api route for the EventsApiController
+func (c *EventsApiController) Routes() Routes {
+	return Routes{
+		{
+			"EventsGet",
+			strings.ToUpper("Get"),
+			"/events",
+			c.EventsGet,
+		},
+	}
+}
+
+// EventsGet - Receive server-sent events from bridge
+func (c *EventsApiController) EventsGet(w http.ResponseWriter, r *http.Request) {
+	c.service.EventsGet(w, r)
+}
