# pkg/nukibridge/api/model_inline_response_200.go
@@ -1,0 +1,17 @@
+/*
+ * Keyturner api
+ *
+ * Keyturner api
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+type InlineResponse200 struct {
+
+	Event string `json:"event,omitempty"`
+
+	Data map[string]interface{} `json:"data,omitempty"`
+}
